# LongTextAgent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: baseline_tasks.jsonl  eval_tasks.jsonl  forestry_report_request.md  project_plan_request.md
src/writing_agent/: README.md  __init__.py  checkpoints.py  cli.py  config.py  llm.py  models.py
src/writing_agent/agents/: __init__.py  (+15 more)
templates/: README.md  style_mapping.json  template_placeholders.md
tests/: test_agent_fallback.py  test_agent_json_parser.py  test_agent_metrics.py  test_agent_protocols.py  test_agent_structured_retry.py  test_agent_trace_graph.py  test_agents_cli.py  test_agents_metrics_cli.py  test_baseline_agent_metrics.py  test_baseline_compare.py  test_baseline_compare_cli.py  test_baseline_summary.py  test_batch_eval.py  test_batch_report.py  test_batch_rerun_failed.py  test_chroma_index_smoke.py  test_citation_auditor_agent.py  test_citation_extractor.py  test_citation_repair_conservative.py  test_citation_repair_llm_fallback.py  test_citation_verifier.py  test_cli_index_commands.py  test_cli_multi_mode.py  test_collection_diff_cli.py  test_collection_management.py  test_config.py  test_doctor.py  test_docx_export.py  test_docx_template_export.py  test_docx_template_placeholders.py  test_docx_template_preflight.py  test_embeddings_config.py  test_evaluate_with_citations.py  test_evaluator.py  test_hybrid_retriever.py  test_index_manifest.py  test_langsmith_config.py  test_llm_judge_parser.py  test_manifest_diff.py  test_model_benchmark_cli_dry_run.py  (+35 more)
(+74 files in other folders)
